# yet-another-personal-assistant

./: AGENTS.md  CONTRIBUTING.md  README.md  justfile  pyproject.toml  pytest.ini  ruff.toml  ty.toml
.github/workflows/: lint.yml  release.yml  test.yml
docs/: architecture.md  phase-1-tasks.md
src/yapa/: __init__.py  __main__.py  config.py  logging.py
src/yapa/cli/: __init__.py  app.py  chat.py  cli.py  client.py  models.py  sessions.py
src/yapa/core/: __init__.py  __main__.py  app.py
src/yapa/core/inference/: __init__.py  provider.py  (+1 more)
src/yapa/database/: __init__.py  engine.py  models.py  repositories.py
src/yapa/models/: __init__.py  base.py  inference.py  message.py  session.py
src/yapa/providers/: __init__.py  base.py  exceptions.py  lmstudio.py  manager.py  openrouter.py
src/yapa/services/: __init__.py  conversation.py  exceptions.py  provider.py  session.py
src/yapa/shared/: __init__.py  config.py  logging.py
src/yapa/storage/: __init__.py  exceptions.py  store.py
tests/: test_config.py
tests/cli/: conftest.py  test_app.py  test_chat.py  test_models.py  test_sessions.py
tests/core/inference/: __init__.py  test_exceptions.py  test_provider.py  test_providers_lmstudio.py  test_providers_openrouter.py
tests/core/repositories/: test_session_file_repository.py  test_session_inmemory_repository.py
tests/core/routers/: __init__.py  test_chat.py  test_models.py  test_sessions.py
tests/core/services/: __init__.py  test_chat_service.py  test_inference_service.py  test_session_service.py
tests/database/: conftest.py  test_models.py  test_repositories.py
tests/models/: test_base.py  test_inference.py  test_message.py  test_session.py
tests/providers/: conftest.py  test_base.py  test_exceptions.py  test_manager.py
tests/providers/concretes/: test_lmstudio.py  test_ollama.py  test_openrouter.py
tests/providers/protocols/: test_openai.py  test_openrouter.py
tests/services/: conftest.py  test_conversation.py  test_exceptions.py  test_models.py  test_provider.py  test_session.py
tests/shared/: test_config.py  test_logging.py
tests/shared/models/: test_message.py  test_session.py
tests/storage/: conftest.py  test_store.py
(+28 files in other folders)
