[project]
name = "yapa"
version = "0.1.5"
description = "A terminal-based personal assistant"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "openai>=2.36.0",
    "openrouter>=0.9.1",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "rich>=15.0.0",
    "sqlmodel>=0.0.38",
    "typer>=0.26.7",
    "websockets>=16.0",
]

[project.scripts]
yapa = "yapa.__main__:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.12",
    "ty>=0.0.35",
]
